bugfix: 1. color of all marks become pink in viewer page. 2. can not jump to original page even extension is installed.

--- a/proxy/viewer.css
+++ b/proxy/viewer.css
@@ -1,82 +1,1 @@
-em.texton-anymark {
-  font-style: unset !important;
-  cursor: pointer !important;
-  position: relative !important;
-}
-em.texton-anymark.highlighted.texton-bg-yellow {
-  background-color: #ffe168 !important;
-}
-em.texton-anymark.highlighted.texton-bg-yellow.bling,
-em.texton-anymark.highlighted.texton-bg-yellow.focused,
-em.texton-anymark.highlighted.texton-bg-yellow:focus {
-  box-shadow: #ffe168 0 0 8px 4px !important;
-  outline: none !important;
-}
-em.texton-anymark.highlighted.texton-bg-green {
-  background-color: #b3e1a5 !important;
-}
-em.texton-anymark.highlighted.texton-bg-green.bling,
-em.texton-anymark.highlighted.texton-bg-green.focused,
-em.texton-anymark.highlighted.texton-bg-green:focus {
-  box-shadow: #b3e1a5 0 0 8px 4px !important;
-  outline: none !important;
-}
-em.texton-anymark.highlighted.texton-bg-blue {
-  background-color: #a5d5f6 !important;
-}
-em.texton-anymark.highlighted.texton-bg-blue.bling,
-em.texton-anymark.highlighted.texton-bg-blue.focused,
-em.texton-anymark.highlighted.texton-bg-blue:focus {
-  box-shadow: #a5d5f6 0 0 8px 4px !important;
-  outline: none !important;
-}
-em.texton-anymark.highlighted.texton-bg-purple {
-  background-color: #e1baeb !important;
-}
-em.texton-anymark.highlighted.texton-bg-purple.bling,
-em.texton-anymark.highlighted.texton-bg-purple.focused,
-em.texton-anymark.highlighted.texton-bg-purple:focus {
-  box-shadow: #e1baeb 0 0 8px 4px !important;
-  outline: none !important;
-}
-em.texton-anymark.highlighted.texton-bg-pink {
-  background-color: #fb9abb !important;
-}
-em.texton-anymark.highlighted.texton-bg-pink.bling,
-em.texton-anymark.highlighted.texton-bg-pink.focused,
-em.texton-anymark.highlighted.texton-bg-pink:focus {
-  box-shadow: #fb9abb 0 0 8px 4px !important;
-  outline: none !important;
-}
-em.texton-anymark-scrollmark {
-  position: fixed !important;
-  right: 16px !important;
-  cursor: pointer !important;
-  z-index: 9999 !important;
-  font-style: normal !important;
-  font-size: 12px !important;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif !important;
-}
-em.texton-anymark-scrollmark.highlighted.texton-fg-yellow {
-  color: #ffcd02 !important;
-}
-em.texton-anymark-scrollmark.highlighted.texton-fg-green {
-  color: #72c759 !important;
-}
-em.texton-anymark-scrollmark.highlighted.texton-fg-blue {
-  color: #48aaed !important;
-}
-em.texton-anymark-scrollmark.highlighted.texton-fg-purple {
-  color: #bf6bd4 !important;
-}
-em.texton-anymark-scrollmark.highlighted.texton-fg-pink {
-  color: #f73879 !important;
-}
-#texton-anymark-root {
-  height: 0 !important;
-  width: 0 !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  border: none !important;
-}
-
+em.texton-anymark{font-style:unset!important;position:relative!important}em.texton-anymark.highlighted{cursor:pointer!important}em.texton-anymark.highlighted.texton-bg-yellow{background-color:#ffe168!important}em.texton-anymark.highlighted.texton-bg-yellow.bling,em.texton-anymark.highlighted.texton-bg-yellow.focused,em.texton-anymark.highlighted.texton-bg-yellow:focus{box-shadow:0 0 8px 4px #ffe168!important;outline:none!important}em.texton-anymark.highlighted.texton-bg-green{background-color:#b3e1a5!important}em.texton-anymark.highlighted.texton-bg-green.bling,em.texton-anymark.highlighted.texton-bg-green.focused,em.texton-anymark.highlighted.texton-bg-green:focus{box-shadow:0 0 8px 4px #b3e1a5!important;outline:none!important}em.texton-anymark.highlighted.texton-bg-blue{background-color:#a5d5f6!important}em.texton-anymark.highlighted.texton-bg-blue.bling,em.texton-anymark.highlighted.texton-bg-blue.focused,em.texton-anymark.highlighted.texton-bg-blue:focus{box-shadow:0 0 8px 4px #a5d5f6!important;outline:none!important}em.texton-anymark.highlighted.texton-bg-purple{background-color:#e1baeb!important}em.texton-anymark.highlighted.texton-bg-purple.bling,em.texton-anymark.highlighted.texton-bg-purple.focused,em.texton-anymark.highlighted.texton-bg-purple:focus{box-shadow:0 0 8px 4px #e1baeb!important;outline:none!important}em.texton-anymark.highlighted.texton-bg-pink{background-color:#fb9abb!important}em.texton-anymark.highlighted.texton-bg-pink.bling,em.texton-anymark.highlighted.texton-bg-pink.focused,em.texton-anymark.highlighted.texton-bg-pink:focus{box-shadow:0 0 8px 4px #fb9abb!important;outline:none!important}em.texton-anymark-scrollmark{position:fixed!important;right:16px!important;cursor:pointer!important;z-index:9999!important;font-style:normal!important;font-size:12px!important;font-family:Arial,Helvetica Neue,Helvetica,sans-serif!important}em.texton-anymark-scrollmark.highlighted.texton-fg-yellow{color:#ffcd02!important}em.texton-anymark-scrollmark.highlighted.texton-fg-green{color:#72c759!important}em.texton-anymark-scrollmark.highlighted.texton-fg-blue{color:#48aaed!important}em.texton-anymark-scrollmark.highlighted.texton-fg-purple{color:#bf6bd4!important}em.texton-anymark-scrollmark.highlighted.texton-fg-pink{color:#f73879!important}#texton-anymark-root{height:0!important;width:0!important;margin:0!important;padding:0!important;border:none!important}
